# fastLoess

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benchmarks/: INTERPRETATION.md  compare_benchmark.py  convert_criterion.py
benchmarks/R/: benchmark.R
benchmarks/fastLoess/: Cargo.toml
benchmarks/fastLoess/benches/: benchmark.rs
benchmarks/output/: r_benchmark.json  rust_benchmark.json  rust_benchmark_cpu.json  rust_benchmark_cpu_serial.json
src/: api.rs  lib.rs
src/adapters/: batch.rs  mod.rs  online.rs  streaming.rs
src/engine/: executor.rs  mod.rs
src/evaluation/: cv.rs  intervals.rs  mod.rs
src/math/: mod.rs  neighborhood.rs
tests/: interpolation_tests.rs
validation/: INTERPRETATION.md
validation/fastLoess/: Cargo.toml
validation/fastLoess/src/: validate.rs  visual_validation.rs
validation/output/loess_rs/: 02_small_quadratic.json  05_degree_0.json  14_sparse_data.json  16_degree_2_sine.json  17_robust_degree_0.json
validation/output/visual/: cv_fits.csv  cv_scores.csv  multivariate_loess.csv
