[package]
name = "fastLoess"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

# Metadata
description = "High-level, parallel LOESS (Locally Estimated Scatterplot Smoothing) implementation in Rust"
authors = ["Amir Valizadeh <thisisamirv@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

# Links
repository = "https://github.com/thisisamirv/fastLoess"
documentation = "https://docs.rs/fastLoess"
homepage = "https://github.com/thisisamirv/fastLoess"

# Categories
keywords = ["loess", "smoothing", "statistics", "regression", "bioinformatics"]
categories = ["science", "algorithms"]

# Build
include = [
    "src/**/*",
    "docs/**/*.svg",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[dependencies]
loess-rs = { path = "../loess-rs", features = ["dev"] }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
ndarray = { version = "0.17.1", default-features = false, optional = true }
rayon = { version = "1.11.0", optional = true }
wgpu = { version = "28.0.0", optional = true }
bytemuck = { version = "1.24.0", features = ["derive"], optional = true }
pollster = { version = "0.4.0", optional = true }
futures-intrusive = { version = "0.5.0", optional = true }

[dev-dependencies]
approx = "0.5.1"

[features]
default = ["cpu"]
cpu = ["dep:rayon", "dep:ndarray"]
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster", "dep:futures-intrusive"]
dev = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Document all features
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
