[package]
name = "fastLoess-benchmark"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "benchmark"
harness = false

[dependencies]
fastLoess = { path = "/home/av746/Desktop/GitHub/fastLoess" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9", features = ["std_rng"] }
rand_distr = "0.5"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
