[package]
name = "validate"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "validate"
path = "src/validate.rs"

[dependencies]
fastLoess = { git = "https://github.com/thisisamirv/fastLoess", branch = "develop" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
